    + [ADB] Fix a couple of typoes.  Thanks, Raphael Geissert.
  * checks/files:
    + [RA] Add swfobject.js to embedded-javascript-library.  Thanks, Paul
      Wise.  (Closes: #512363)
  * checks/standards-version.desc:
    + [ADB] Add source-control-file to the list of information needed by
      the script.  Thanks, Raphael Geissert.  (Closes: #512563)

  * lib/Lintian/Collect/Source.pm:
    + [ADB] Add a missing "use Util" as the module uses the fail() function
      from that module.  Thanks, Raphael Geissert.  (Closes: #512560)
  * lib/Text_utils.pm:
    + [ADB] Add a missing "use Util" as the module uses the fail() function
      from that module.  Thanks, Raphael Geissert.

 -- Russ Allbery <rra@debian.org>  Mon, 19 Jan 2009 20:45:31 -0800

lintian (2.1.6) unstable; urgency=low

  * Summary of tag changes:
    + Added
      - diff-contains-cmake-cache-file
      - diff-contains-hg-tags-file
      - duplicate-uploader
      - empty-debian-diff
      - malformed-changes-file
      - missing-comma-after-substvar
      - source-contains-hg-tags-file

  * checks/control-file{,.desc}:
    + [RA] Check for missing commas after substvars in dependency fields.
      Thanks, Jari Aalto.  (Closes: #409099)
  * checks/cruft{,.desc}:
    + [RA] Error on CMakeCache.txt files added or modified in the diff.
      Thanks, Joerg Jaspert.  (Closes: #510957)
    + [RA] Warn about .hgtags files in the diff and source.  Thanks,
      Holger Levsen and Chris Lamb.  (Closes: #464837)
    + [RA] Warn if the Debian diff or a non-native package is entirely
      empty.  (Closes: #498668)
  * checks/debhelper:
    + [RA] Ignore architecture when checking whether sufficient build
      dependencies are present for dh_* commands.  If the maintainer has
      architecture-restricted build dependencies, they presumably know
      what they're doing.  (Closes: #511859)
  * checks/fields{,.desc}:
    + [ADB] Warn about an individual uploader appearing multiple times